V2.2 - Fix main image sizing issue
Fixed the problem where the main images height would become too large
for the viewing height.
Problems still to fix:
- Restructure the HTML so that all the apps elements are contained
within a main container div (This should help with over all positioning
& sizing issues)
- Fix scroll bar pop up issue
- Fix image resizing issues
- Create a app welcome page that is displayed first instead of the first
image
- Investigate caching, and see if it's possible to save the number of
clicks for each picture with a user.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,13 +1,12 @@
 @import "./reset/basic-reset";
 
-//body {
-//  background-color: #e6e6e6;
-//  border: 0.5px orange dotted;
-//}
-
-.container {
-  width: 100%;
+body {
+  overflow: hidden;
 }
+//
+//.container {
+////  width: 100%;
+//}
 
 #counter, #image-container, #button {
   position: relative;
@@ -24,18 +23,22 @@
 =                  The Menu                =
 ===========================================*/
 
+#menu::-webkit-scrollbar {
+    display: none;
+}
 #menu {
   position: fixed;
   left: 0;
   bottom: 0;
   top: 0;
   z-index: 10;
-  max-width: 140px;
+  max-width: 106px;
   width: 10%;
   min-width: 70px;
   background: purple;
-  overflow-y: auto;
   max-height: 600px;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   #menu-title {
     margin: 10px;
@@ -54,6 +57,7 @@
   position: fixed;
   z-index: 1;
   width: 100%;
+  max-width: 903px;
   height: 600px;
   left: 50%;
   overflow: hidden;
@@ -99,3 +103,5 @@
     left: 50%;
   }
 }
+
+
